force-app/main/default/objects/LLC_BI__Debt__c/LLC_BI__Debt__c.object-meta.xml
<CustomObject>
    <description>The debt object stores information about an applicant&apos;s debts.</description>
    <label>Debt</label>
    <nameField>
        <label>Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>