force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Number__c</fullName>
    <description>The system populates this optional field to associate the account number with the creditor.</description>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>