force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Count_90_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Count_90_Days_Past_Due__c</fullName>
    <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</description>
    <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</inlineHelpText>
    <label>Count 90 Days Past Due</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>