force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Creditor_Name__c</fullName>
    <description>This optional text field populates with the credit subscriber&apos;s name.</description>
    <label>Creditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>