force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Excluded_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Excluded_Reason__c</fullName>
    <description>This field is optional and is a short description of the reason why the debt was excluded from total calculations.</description>
    <inlineHelpText>Enter a short description of the reason why the debt was excluded from total calculations.</inlineHelpText>
    <label>Excluded Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>