force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Exposure_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exposure_Type__c</fullName>
    <description>Users manually populate this optional text box. This field enables users to specify the exposure type when calculating exposure for a debt.</description>
    <label>Exposure Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>