force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__High_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__High_Credit_Amount__c</fullName>
    <description>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</description>
    <inlineHelpText>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</inlineHelpText>
    <label>High Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>