force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Is_Manual__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system or user selects this checkbox field to indicate that the user manually created or edited the debt record. By default, this field is deselected.</description>
    <label>Is Manual</label>
    <type>Checkbox</type>
</CustomField>