force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Is_Source_Debt__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Source_Debt__c</fullName>
    <description>This field represents whether a debt is a source debt. If the output is &apos;True&apos; then debt is a source debt.</description>
    <formula>IF( ISBLANK( LLC_BI__Source_Debt__c ) &amp;&amp; ISBLANK( LLC_BI__Internal_Debt__c ) &amp;&amp; LLC_BI__Is_Manual__c = FALSE &amp;&amp; LLC_BI__New_Debt__c = FALSE, True, False)</formula>
    <label>Is Source Debt</label>
    <type>Checkbox</type>
</CustomField>