force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Is_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this boolean field. If selected, the Debt contains total values for the associated Schedule Sections. If deselected, the Debt contains a manually entered or calculated value. By default, it is deselected.</description>
    <label>Is Total</label>
    <type>Checkbox</type>
</CustomField>