force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Monthly_Payment__c</fullName>
    <description>This field is required and represents the amount paid on the debt every month.</description>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>