force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Months_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Months_Reviewed__c</fullName>
    <description>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</description>
    <inlineHelpText>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</inlineHelpText>
    <label>Months Reviewed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>