force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Past_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Past_Due_Amount__c</fullName>
    <description>The system populates this optional currency field with the amount the borrower has past due on the account.</description>
    <inlineHelpText>The system populates this optional currency field with the amount the borrower has past due on the account.</inlineHelpText>
    <label>Past Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>