force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Payment_Pattern__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payment_Pattern__c</fullName>
    <description>The system populates this optional text field with the borrower&apos;s payment pattern.</description>
    <inlineHelpText>The system populates this optional text field with the borrower&apos;s payment pattern.</inlineHelpText>
    <label>Payment Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>