force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This optional field automatically populates via the system once a new debt is created from a product package. This field associates which product package the debt belongs to.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <type>Lookup</type>
</CustomField>