force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Terms_Duration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Terms_Duration__c</fullName>
    <description>The system populates this optional text field with the term duration of the financial obligation.</description>
    <inlineHelpText>The system populates this optional text field with the term duration of the financial obligation.</inlineHelpText>
    <label>Terms Duration</label>
    <length>32</length>
    <type>Text</type>
</CustomField>